server/views/html/styles.css
@font-face {
  font-family: "Merienda-Bold";
  src: url('Merienda-Bold.ttf');
}

@font-face {
  font-family: "Merienda-Regular";
  src: url('Merienda-Regular.ttf');
}

.text-uppercase {
  text-transform: uppercase !important;
}

.text-center {
  text-align: center !important;
}

body {
  margin: 0;
  padding: 0;
  overflow: hidden;
  font-family: "Merienda-Regular";
  font-weight: 400;
  line-height: 1.5;
  text-align: left;
  color: #000;
  background-color: #fff;
}

.bg-container {
  width: 100%;
  padding: 0 !important;
  margin: 0 auto !important;
  background-color: white;
}

.container {
  width: 95%;
  padding: 0 !important;
  margin: 0 auto !important;
}

h3.numcircle {
  font-size: 18vw;
  font-weight: 700;
  line-height: 24vw;
  width: 24vw;
  border-radius: 12vw;
}

h4.numcircle, #icon-container.numcircle {
  font-size: 5vw;
  font-weight: 600;
  line-height: 12vw;
  height: 12vw;
  width: 12vw;
  border-radius: 50%;
}

#icon-container.numcircle img {
  width: 90%;
  position: absolute;
  left:5%;
  bottom:10%;
  filter: invert(1);
}

.numcircle {
  color: white;
  background: #000000;
  margin: 1rem;
  vertical-align: middle;
}

#top-banner {
  height: 20vh;
}

#top-banner .numcircle, #top-banner #month {
  float: left;
}

#top-banner #temp {
  font-size: 6vw;
  position: absolute;
  top: 20vh;
  right: 2vw;
}

#top-banner #icon-container {
  position: absolute;
  top: 32vh;
  right: 2vw;
}

.numcircle.live-icon {
  overflow: visible;
}

.live-radio {
  height: 5vw;
  left: 50%;
  pointer-events: none;
  position: absolute;
  top: -4.15vw;
  transform: translateX(-50%);
  width: 8vw;
}

.live-radio-mast {
  background: #000;
  display: block;
  height: 3.9vw;
  left: 50%;
  position: absolute;
  top: 2.35vw;
  transform: translateX(-50%);
  width: 0.55vw;
}

.live-radio-mast:before,
.live-radio-mast:after {
  background: #000;
  content: "";
  display: block;
  height: 2.65vw;
  position: absolute;
  top: -0.55vw;
  transform-origin: bottom center;
  width: 0.5vw;
}

.live-radio-mast:before {
  left: -0.95vw;
  transform: rotate(-28deg);
}

.live-radio-mast:after {
  right: -0.95vw;
  transform: rotate(28deg);
}

.live-radio-waves span {
  border: 0.5vw solid #000;
  border-bottom: 0;
  border-left-color: transparent;
  border-radius: 50% 50% 0 0;
  border-right-color: transparent;
  box-sizing: border-box;
  display: block;
  left: 50%;
  position: absolute;
  transform: translateX(-50%);
}

.live-radio-waves span:nth-child(1) {
  height: 2.6vw;
  top: 1.2vw;
  width: 4vw;
}

.live-radio-waves span:nth-child(2) {
  height: 4vw;
  top: 0;
  width: 6.7vw;
}

#top-banner #month {
  margin: auto 0;
  vertical-align: middle;
  line-height: 20vh;
  font-size: 10vw;
}

#map-container {
  position: relative;
  overflow: hidden;
  height: 400px;
  z-index: -1;
  width: 100%;  /* Add width to ensure container spans full width */
}

#map {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;  /* Add width to ensure map fills container */
}

.fc-icon-stat {
  display: flex;
  align-items: center;
}

.fc-icon-stat div {
  margin: 0.5vh 0 !important;
  padding: 0 !important;
}

.fc-icon-stat .fc-icon {
  float: left;
  width: 35%;
  padding: 0;
  margin: 0 auto;
}

.fc-icon-stat .fc-stat {
  float: left;
  width: 55%;
  font-size: 4.5vw;
  line-height: 3vh;
}

.fc-icon-stat .fc-stat p {
  padding-left: 1vw;
}

.fc-icon img {
  width: 100%;
  text-align: center;
  margin: auto !important;
}

#current-weather {
  overflow: hidden;
  padding-bottom: 1rem;
}

#forecast-today-icon {
  float: left;
  width: 40%;
  position: relative;
}

#forecast-today-icon .fc-icon {
  float: none;
  width: 90%;
}

#forecast-today-icon>div.fc-icon>img {
  width: 100%;
  margin: 0 auto !important;
}

#forecast-today-icon .fc-stat p {
  margin: 0;
}

#forecast-today-stat {
  float: left;
  width: 60%;
}

#hourly-forecasts .forecast-hour {
  text-align: center;
  font-size: 5vw;
  font-family: "Merienda-Regular";
}

.hourly-forecasts-forecast>tr {
  padding: 0 1vw;
}

.hourly-forecast-icon {
  width: 80%;
  margin: 0 auto !important;
}

#rain-temp-chart {
  height: 280px !important;
  width: 100% !important;
}

